--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/hooks": "^7.11.2",
     "geist": "^1.3.1",
     "next": "14.2.5",
     "react": "^18",
