--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@unocss/webpack": "^0.61.5",
+    "@unocss/postcss": "^0.61.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "postcss": "^8.4.39",
     "typescript": "^5",
     "unocss": "^0.61.5"
   }
