--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.36",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@unocss/postcss": "^0.61.5",
+    "@unocss/preset-rem-to-px": "^0.61.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.39",
