--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^8.0.0",
     "@mantine/hooks": "^7.11.2",
+    "ckeditor5": "^42.0.1",
     "geist": "^1.3.1",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
