--- a/package.json
+++ b/package.json
@@ -1,35 +1,9 @@
 {
-  "name": "windstone",
-  "version": "0.1.0",
-  "private": true,
+  "name": "notwindstone-website",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@ckeditor/ckeditor5-react": "^8.0.0",
-    "@mantine/hooks": "^7.11.2",
-    "ckeditor5": "^42.0.1",
-    "geist": "^1.3.1",
-    "next": "14.2.5",
-    "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "minify": "minify src/mi.css > src/mi.min.css"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.1.36",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@unocss/postcss": "^0.61.5",
-    "@unocss/preset-rem-to-px": "^0.61.5",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8.4.39",
-    "typescript": "^5",
-    "unocss": "^0.61.5"
+    "minify": "^14.0.0"
   }
 }
