--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,6 +29,8 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
+      - name: Update minified code
+      - run: npm run minify
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup Pages
